# juntagrico-billing

./: .codeclimate.yml  .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  manage.py  pyproject.toml  requirements-local.txt  requirements.txt  setup.py  testsettings.py  testurls.py
.github/workflows/: juntagrico-ci.yml  python-publish.yml
juntagrico_billing/: __init__.py  admin.py  apps.py  config.py  juntagricoapp.py  mailer.py  models.py  tests.py  urls.py  views.py  views_legacy.py  views_payment.py
juntagrico_billing/admin/: __init__.py  bill.py  billitem_inline.py  businessyear.py  payment.py  payment_inline.py
juntagrico_billing/dao/: billdao.py  paymentdao.py  subscription_parts.py  subscriptions.py
juntagrico_billing/docs/: index.rst  instalation.rst  release_notes.rst  settings.rst
juntagrico_billing/entity/: account.py  bill.py  billing.py  payment.py  settings.py
juntagrico_billing/fixtures/: billing.json
juntagrico_billing/lifecycle/: billitem.py  payment.py
juntagrico_billing/migrations/: 0001_initial.py  0001_squashed_0012_post_1_4.py  0002_auto_20200315_1613.py  0002_auto_20200501_1017.py  0002_bill_published.py  0003_auto_20201025_1739.py  0003_vat.py  0004_auto_20201031_1823.py  0004_settings_balancing_paymenttype.py  0005_alter_settings_balancing_paymenttype_and_more.py  0005_auto_20201031_2329.py  0006_alter_payment_paid_date.py  0006_auto_20201103_1521.py  0010_pre_1_4.py  (+7 more)
test/: camt054_testfile2.xml  test_base.py  test_billbookings.py  test_bills.py  test_bookings.py  test_payment_processor.py  test_payment_reader.py
(+61 files in other folders)
